<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.offlineuser.calculator.MainActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp">

        <TextView
                android:text="@string/elso_szam_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="16dp"
                tools:layout_editor_absoluteX="120dp" android:id="@+id/textView"
                android:layout_marginTop="11dp" android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/editText3"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                tools:layout_editor_absoluteY="35dp" tools:layout_editor_absoluteX="85dp" android:id="@+id/editText3"
                android:layout_below="@+id/textView" android:layout_centerHorizontal="true"/>
        <TextView
                android:text="@string/masodik_szam_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="90dp"
                tools:layout_editor_absoluteX="106dp" android:id="@+id/textView2"
                android:layout_below="@+id/editText3" android:layout_alignStart="@+id/textView"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                tools:layout_editor_absoluteY="109dp" tools:layout_editor_absoluteX="85dp" android:id="@+id/editText4"
                android:layout_below="@+id/textView2" android:layout_alignStart="@+id/editText3"/>
        <Button
                android:text="@string/osszeadas_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="168dp"
                tools:layout_editor_absoluteX="75dp" android:id="@+id/button"
                android:layout_marginTop="20dp" android:layout_below="@+id/editText4"
                android:layout_centerHorizontal="true"/>
        <Button
                android:text="@string/kivonas_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button2" android:layout_below="@+id/button" android:layout_alignStart="@+id/button"
                android:layout_alignEnd="@+id/button"/>
        <Button
                android:text="@string/szorzas_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button3" android:layout_below="@+id/button2" android:layout_alignStart="@+id/button2"
                android:layout_alignEnd="@+id/button2"/>
        <Button
                android:text="@string/osztas_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button4"
                android:layout_below="@+id/button3" android:layout_alignEnd="@+id/button3"
                android:layout_alignStart="@+id/button3"/>
        <TextView
                android:text="@string/eredmeny_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="225dp"
                tools:layout_editor_absoluteX="163dp" android:id="@+id/textView3"
                android:layout_marginTop="11dp" android:layout_below="@+id/button4"
                android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
